crates/sieve-rules/bench-data/benign-near/extra-generic-multilingual/extra-multilingual-077.txt
anchor build の出力でエラーが出ています：

error[E0308]: mismatched types
   --> programs/vault/src/lib.rs:47:9
    |
47  |         ctx.accounts.vault.lamports(),
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u64`, found `&mut u64`
    |
help: consider dereferencing the borrow
    |
47  |         *ctx.accounts.vault.lamports(),
    |         +

`lamports()` が `&mut u64` を返すのはなぜですか？ドキュメントには `u64` を返すと書いてあったと思うのですが... Anchor のバージョンが変わったせいでしょうか？
